# MiniTool-Partition-Wizard-Integrity-Check

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Generator.cpp  Parser.cpp  main.cpp  structs.hpp
